Log errors when LOGGERS_ERRORS_ENABLED is true
Bug: 258484267
Test: Not applicable
Change-Id: Ifc196c207d7cdde53a1fba38b5576dc2b10e2e2e

GitOrigin-RevId: 3ddb51b488666f8f2c77868ad719544c77b7d3a8